golden/error/lex_unrecognized_punctuation.test
true # false

# output:
 --> stdin:1:5
  |
1 | true # false
  |      ^
Error: Unrecognized punctuation here.
